<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Java Jukebox</string>
    <string name="preferences">Preferences</string>
    <string name="nowplaying">Now Playing</string>
    <string name="title_label">Title:</string>
    <string name="album_label">Album:</string>
    <string name="artist_label">Artist:</string>
    <string name="file_label">File:</string>
    <string name="coming_up">Coming Up</string>
    <string name="add_track">Add Track</string>
    <string name="add_five_tracks">Add 5 Tracks</string>
</resources>
