<?xml version="1.0" encoding="utf-8"?>
		<LinearLayout
			xmlns:android="http://schemas.android.com/apk/res/android" 
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    >
		<LinearLayout
		    android:orientation="vertical"
		    android:layout_width="fill_parent"
		    android:layout_height="fill_parent"
		    android:layout_weight="1"
		    >
			<TextView  
			    android:layout_width="fill_parent" 
			    android:layout_height="wrap_content" 
			    android:text="@string/nowplaying"
			    android:textSize="16px"
			    android:textStyle="bold"
			    />
			<TableLayout android:id="@+id/tableLayout1" android:layout_height="wrap_content" android:layout_width="match_parent">
			    <TableRow android:id="@+id/titleRow" android:layout_width="fill_parent" android:layout_height="wrap_content">
			        <TextView android:text="@string/title_label" android:id="@+id/titleLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			        <TextView android:id="@+id/titleValue" android:scrollHorizontally="false" android:layout_width="fill_parent" android:layout_weight="0" android:layout_height="wrap_content"></TextView>
			    </TableRow>
			    <TableRow android:id="@+id/albumRow" android:layout_width="fill_parent" android:layout_height="wrap_content">
			        <TextView android:text="@string/album_label" android:id="@+id/albumLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			        <TextView android:id="@+id/albumValue" android:scrollHorizontally="false" android:layout_width="fill_parent" android:layout_weight="1"  android:layout_height="wrap_content"></TextView>
			    </TableRow>
			    <TableRow android:id="@+id/artistRow" android:layout_width="fill_parent" android:layout_height="wrap_content">
			        <TextView android:text="@string/artist_label" android:id="@+id/artistLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			        <TextView android:id="@+id/artistValue" android:scrollHorizontally="false" android:layout_width="fill_parent" android:layout_weight="1"  android:layout_height="wrap_content"></TextView>
			    </TableRow>
			    <TableRow android:id="@+id/fileRow" android:layout_width="fill_parent" android:layout_height="wrap_content">
			        <TextView android:text="@string/file_label" android:id="@+id/fileLabel" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
			        <TextView android:id="@+id/fileValue" android:scrollHorizontally="false" android:maxWidth="1sp" android:layout_width="fill_parent" android:layout_weight="1"  android:layout_height="wrap_content"></TextView>
			    </TableRow>
			    <ProgressBar android:layout_height="wrap_content" android:id="@+id/currentProgress" style="@android:style/Widget.ProgressBar.Horizontal" android:layout_width="match_parent"></ProgressBar>
			</TableLayout>
			<LinearLayout android:layout_height="wrap_content" android:id="@+id/controlsLayout" android:layout_width="match_parent">
			    <ImageButton android:src="@drawable/speaker" android:layout_height="wrap_content" android:id="@+id/volumeButton" android:layout_width="wrap_content" android:layout_weight="1"></ImageButton>
			    <ImageButton android:src="@drawable/button_blue_first" android:layout_height="wrap_content" android:id="@+id/restartButton" android:text="Restart" android:layout_width="wrap_content" android:layout_weight="1"></ImageButton>
			    <ImageButton android:src="@drawable/button_blue_play" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/playButton" android:text="Play" android:layout_width="wrap_content"></ImageButton>
			    <ImageButton android:src="@drawable/button_blue_pause" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/pauseButton" android:text="Pause" android:layout_width="wrap_content" android:visibility="gone"></ImageButton>
			    <ImageButton android:src="@drawable/button_blue_last" android:layout_weight="1" android:layout_height="wrap_content" android:id="@+id/skipButton" android:text="Skip" android:layout_width="wrap_content"></ImageButton>
			</LinearLayout>
		</LinearLayout>
		<LinearLayout android:orientation="horizontal" android:layout_height="wrap_content" android:id="@+id/ratingsLayout" android:layout_width="match_parent" android:layout_gravity="bottom">
			<ImageButton android:id="@+id/likeButton" android:src="@drawable/happy_icon" android:text="Like" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageButton>
			<ImageButton android:id="@+id/dislikeButton" android:src="@drawable/sad_icon" android:text="Dislike" android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content"></ImageButton>
	        <TextView android:id="@+id/ratingValue" android:layout_height="wrap_content" android:visibility="gone" android:layout_width="match_parent" android:gravity="center"></TextView>
		</LinearLayout>
</LinearLayout>
		